ui -- fix fully funded double border over stretching

--- a/public/stylesheets/screen_spotus.css
+++ b/public/stylesheets/screen_spotus.css
@@ -119,6 +119,10 @@ h4.title {
   text-align:right;
   margin: 0;
   }
+.fully_funded_no_text {
+  text-indent:-10000px;
+  font-size: 0;
+  }
 .shared_progress_bar {
   width: 120px;
   }
